Bug 65993: window.open("") should open a blank browser window, but loads the homepage instead. This should fix a whole bunch of similar complaints about the homepage loading instead of, or right before, the url you wanted from e.g. mail/news. r=jst, r=racham, sr=ben. Many thanks to racham for helping me test my patches.